TestSuite/errors/err0518_invalid_path.pas
//!Путь содержит недопустимые символы
{$mainresource '|'}
begin
  
end.
